--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>
 Swim Sets
 </title>
+   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <h1> Welcome to Swim Sets!</h1>
