--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ Swim Sets
    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<header>
 <h1> Welcome to Swim Sets!</h1>
+   </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
 <input type='email' placeholder='Request a new account'>
 <input type='submit'>
