--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ Swim Sets
 </head>
 <body>
 <header>
-<h1> Welcome to Swim Sets!</h1>
+<h1> Welcome to Swim Sets!</h1>\
+   <img href='swimmer.jpg'>
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
 <input type='email' placeholder='Request a new account'>
