--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Swim Sets
 <body>
 <header>
 <h1> Welcome to Swim Sets!</h1>\
-   <img src='swimmer.jpg'>
+   <img src='swimmer.jpg' hight: 35px>
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
 <input type='email' placeholder='Request a new account'>
