--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@ Swim Sets
 <header>
 <h1> Welcome to Swim Sets!</h1>\
    <img src='swimmer.jpg' hight='35' width='50'>
+   <ul>
+      <li>Public Workouts</li>
+      <li>Login</li>
+      <li>About</li>
+       </ul>
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
 <input type='email' placeholder='Request a new account'>
