--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ Swim Sets
 <h1> Welcome to Swim Sets!</h1>\
    <img src='swimmer.jpg' hight='355' width='370'>
    <ul>
-      <li>Public Workouts</li>
-      <li>Login</li>
-      <li>About</li>
+      <li><a href='#'>Public Workouts</a></li>
+      <li><a href='#'>Login</a></li>
+      <li><a href='#'>About</a></li>
        </ul>
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
