--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
 <title>
 Swim Sets
 </title>
-  
+ <style>
+       ul {
+      padding: 10px;
+      background: black;
+    }
+    li {
+      display: inline;
+      padding: 0px 10px 0px 10px;
+    }
+    </style>
 </head>
 <body>
 <header>
