--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ Swim Sets
       display: inline;
       padding: 0px 10px 0px 10px;
     }
+    a {
+        color: red;
+     }
     </style>
 </head>
 <body>
