--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ Swim Sets
     a {
         color: red;
      }
+     body {
+         background='water.jpg';
+     }
     </style>
 </head>
 <body>
