--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Swim Sets
         color: red;
      }
      body {
-         background='water.jpg';
+         background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
      }
     </style>
 </head>
