--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ Swim Sets
 <h4>New to swim sets? Create an account or login as a guest!</h4>
 <input type='email' placeholder='Request a new account'>
 <input type='submit'>
+    <button>Like</button>
 
 </body>
 </html>
