--- a/signin/Sign-In.html
+++ b/signin/Sign-In.html
@@ -17,7 +17,8 @@
             function check(form) { /*function to check userid & password*/
                 /*the following code checkes whether the entered userid and password are matching*/
                 if(form.userid.value == "myuserid" && form.pswrd.value == "mypswrd") {
-                    window.open('target.html')/*opens the target page while Id & password matches*/
+                    window.open('target.html')
+                    alert('Loged in!')/*opens the target page while Id & password matches*/
                     var login = 1;
                 }
                 else {
