--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@ Swim Sets
     </style>
 </head>
 <body>
+    <script language='javascript'>
+        var login = 0;
+    </script>
 <header>
 <h1> Welcome to Swim Sets!</h1>\
    <img src='swimmer.jpg' hight='355' width='370'>
