--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Swim Sets
 <body>
     <script language='javascript'>
         var login = 0;
-        var pagevisits = pagevisits + 1;
+        var pagevisits = 1;
     </script>
 <header>
 <h1> Welcome to Swim Sets!</h1>\
