--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Swim Sets
    <img src='swimmer.jpg' hight='355' width='370'>
    <ul>
       <li><a href='#'>Public Workouts</a></li>
-      <li><a href='#'>Login</a></li>
+      <li><a href='Sign-In.html'>Login</a></li>
       <li><a href='#'>About</a></li>
        </ul>
    </header>
