--- a/Sign-In.html
+++ b/Sign-In.html
@@ -16,7 +16,7 @@
         <script language="javascript">
             function check(form) { /*function to check userid & password*/
                 /*the following code checkes whether the entered userid and password are matching*/
-                if(form.userid.value == "myuserid" && form.pswrd.value == "mypswrd") {
+                if(form.userid.value == "coach" && form.pswrd.value == "swimmer") {
                     window.open('target.html')
                     alert('Loged in!')/*opens the target page while Id & password matches*/
                     var login = 1;
