--- a/Sign-In.html
+++ b/Sign-In.html
@@ -17,7 +17,7 @@
             function check(form) { /*function to check userid & password*/
                 /*the following code checkes whether the entered userid and password are matching*/
                 if(form.userid.value == "coach" && form.pswrd.value == "swimmer") {
-                    window.open('target.html')
+                    window.open('privatelogin.html')
                     alert('Loged in!')/*opens the target page while Id & password matches*/
                     var login = 1;
                 }
