--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Swim Sets
         var pagevisits = pagevisits + 1;
     </script>
 <header>
-<h1> Welcome to Swim Sets!</h1>\
+<img src='welcome.jpg'>
    <img src='swimmer.jpg' hight='355' width='370'>
    <ul>
       <li><a href='#'>Public Workouts</a></li>
