--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ Swim Sets
      body {
          background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
      }
+     img {
+         display: inline;
+     }
     </style>
 </head>
 <body>
@@ -30,6 +33,7 @@ Swim Sets
     </script>
 <header>
 <img src='welcome.png'>
+    <h1> </h1>
    <img src='swimmer.jpg' hight='355' width='370'>
    <ul>
       <li><a href='#'>Public Workouts</a></li>
