--- a/Sign-In.html
+++ b/Sign-In.html
@@ -13,8 +13,8 @@
             var login = 0;
         </script>
         <form name="login">
-            Username<input type="text" name="userid"/>
-            Password<input type="password" name="pswrd"/>
+            <input type="text" placeholder='Username' name="userid"/>
+            <input type="password" placeholder='Password' name="pswrd"/>
             <input type="button" onclick="check(this.form)" value="Login"/>
             <input type="reset" value="Cancel"/>
         </form>
