--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -2,6 +2,27 @@
 <html>
 <head>
       <title>Public Workouts</title>
+      <style>
+            p {
+  color: rgba(255,255,255,1);
+  background: rgba(0,0,0,1);
+  padding: 10px;
+  line-height: 28px;
+  text-align: justify;
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+}
+.freestyle {
+      background-image: src='swimmer.jpg'
+            }
+      </style>
       </head>
 <body>
-      <a href='publicfree'><img src
+      <img src='pw.png'>
+     <div class='Freestyle>
+                 <p> Freestyle based sets, ranging from easy to hard.</p>
+                 </div>
+                 </body>
+                 </html>
+
