--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -14,7 +14,7 @@
   margin: 0;
 }
 .freestyle {
-      background-image: src='swimmer.jpg'
+      background-image: url("https://swimsets.github.io/swimmer.jpg")
             }
       </style>
       </head>
