--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -20,7 +20,7 @@
       </head>
 <body>
       <img src='pw.png'>
-     <div class='Freestyle>
+     <div class='Freestyle'>
                  <p> Freestyle based sets, ranging from easy to hard.</p>
                  </div>
                  </body>
