--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -14,7 +14,7 @@
   margin: 0;
 }
 .freestyle {
-      background-image: url("https://swimsets.github.io/swimmer.jpg")
+      background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/29/33_ACPS_Atlanta_1996_Swimming_Jeff_Hardy.jpg")
             }
       </style>
       </head>
