--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -13,14 +13,14 @@
   bottom: 0;
   margin: 0;
 }
-.freestyle {
+.Freestyle {
       background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/29/33_ACPS_Atlanta_1996_Swimming_Jeff_Hardy.jpg")
             }
       </style>
       </head>
 <body>
-      <img src='pw.png'>
-     <div class='Freestyle'>
+      <img src="pw.pn">
+     <div class="Freestyle">
                  <p> Freestyle based sets, ranging from easy to hard.</p>
                  </div>
                  </body>
