--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -13,16 +13,14 @@
   bottom: 0;
   margin: 0;
 }
-.Freestyle {
-      background-image: url("https://upload.wikimedia.org/wikipedia/commons/2/29/33_ACPS_Atlanta_1996_Swimming_Jeff_Hardy.jpg")
-            }
+
       </style>
       </head>
 <body>
-      <img src="pw.pn">
-     <div class="Freestyle">
+      <img src="pw.png">
+     
                  <p> Freestyle based sets, ranging from easy to hard.</p>
-                 </div>
+                
                  </body>
                  </html>
 
