--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -17,7 +17,7 @@
       </style>
       </head>
 <body>
-      <img src="pw.png">
+      <h1>Public Workouts</h1>
      
                  <p> Freestyle based sets, ranging from easy to hard.</p>
                 
