--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -13,12 +13,14 @@
   bottom: 0;
   margin: 0;
 }
+body {
+text-align: center;
+            }
 
       </style>
       </head>
 <body>
       <h1>Public Workouts</h1>
-     
                  <p> Freestyle based sets, ranging from easy to hard.</p>
                 
                  </body>
