--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -18,7 +18,7 @@ text-align: center;
       </head>
 <body>
       <h1>Public Workouts</h1>
-                 <p> Freestyle based sets, ranging from easy to hard.</p>
+      <a src='publicfree'> <p> Freestyle based sets, ranging from easy to hard.</p></a>
                 
                  </body>
                  </html>
