--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>
 Swim Sets
 </title>
- <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
+ <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
  <style>
        ul {
       padding: 10px;
