--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>
 Swim Sets
 </title>
- <link rel="shortcut icon" href="ss.png" type="image/x-icon" />
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
  <style>
        ul {
       padding: 10px;
