--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>
 Swim Sets
 </title>
-<link rel="shortcut icon" type="image/x-icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}" >
+<link rel="shortcut icon" type="image/png" href="{{https://swimsets.github.io}}/favicon.png">
  <style>
        ul {
       padding: 10px;
