--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>
 Swim Sets
 </title>
-<link rel="shortcut icon" type="image/png" href="/favicon.png">
+<link rel="icon" href="/favicon.ico">
  <style>
        ul {
       padding: 10px;
