--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <DOCTYPE html>
 <html>
 <head>
+    <link rel="shortcut" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="main.css">
 <title>
 Swim Sets
 </title>
-<link rel="icon" href="/favicon.ico">
+
  <style>
        ul {
       padding: 10px;
