--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <DOCTYPE html>
 <html>
 <head>
-    <link rel="shortcut" href="/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon"
+ href="http://swimsets.github.io/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="main.css">
 <title>
 Swim Sets
