--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-  <link rel="shortcut icon"
+  <link rel="icon"
  href="http://swimsets.github.io/favicon.ico" />
     <link rel="stylesheet" type="text/css" href="main.css">
 <title>
