--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
-  <link rel="icon"
- href="http://swimsets.github.io/favicon.ico" />
+ <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="main.css">
 <title>
 Swim Sets
