--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Swim Sets
  <style>
        ul {
       padding: 10px;
+        background-color: black;
       
     }
     li {
@@ -42,14 +43,15 @@ Swim Sets
         var pagevisits = pagevisits + 1;
     </script>
 <header>
-<img src='welcome.png'>
-    <h1> </h1>
-   <img src='swimmer.jpg' hight='355' width='370'>
-   <ul>
+ <ul>
       <li><a href='#'>Public Workouts</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
       <li><a href='#'>About</a></li>
        </ul>
+<img src='welcome.png'>
+    <h1> </h1>
+   <img src='swimmer.jpg' hight='355' width='370'>
+   
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
     
