--- a/publicfree.html
+++ b/publicfree.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html>
+<head>
+      <title>Public Workouts</title>
+      <style>
+            p {
+  color: rgba(255,255,255,1);
+  background: rgba(0,0,0,1);
+  padding: 10px;
+  line-height: 28px;
+}
+body {
+text-align: center;
+            }
+      </style>
+      </head>
+<body>
+  <h1> Public Freestyle Workouts</h1>
+  <h3>Sprint set</h3>
+  <p>4x25 build freestyle on :45
+    50 sprint
+    4x50 build freestyle on 1:00-
+    100 free- 50 fast, 50 easy
+    4x75 freestyle- 50 build, 25 sprint on 1:40
+    100 free- 50 fast, 50 easy
+    4 x 100 freestyle- 50 build, 25 sprint, 25 easy
+    100 easy choice</p>
+  <h3></h3>
+  <h3>Kick set</h3>
+  <p>*All with kick boards*
+    10 x 25 kick on :30
+    odds sprint, evens smooth
+    All flutter kick
+    50 easy backstroke
+    5 x 50 kick on 1:10-
+    Flutter down, choice kick back
+    All sprint
+    50 easy choice
+    2 x 100 on 1:45-
+    All sprint flutter
+    50 easy choice
+    200 flutter kick-
+    Sprint down, easy back
+    100 easy choice
+    </p>
+    
+                
+                 </body>
+                 </html>
 
