--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Swim Sets
     </script>
 <header>
  <ul>
-      <li><a href='#'>Public Workouts</a></li>
+      <li><a href='/publicworkouts/home.html'>Public Workouts</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
       <li><a href='#'>About</a></li>
        </ul>
