--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -13,12 +13,13 @@
 body {
 text-align: center;
             }
-
+a {
+      color: rgba(0,0,0,1);
       </style>
       </head>
 <body>
       <h1>Public Workouts</h1>
-      <a src='publicfree.html'> <p> Freestyle based sets, ranging from easy to hard.</p></a>
+      <a src='publicfree.html'> Freestyle based sets, ranging from easy to hard.</a>
                 
                  </body>
                  </html>
