--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -19,7 +19,7 @@ a {
       </head>
 <body>
       <h1>Public Workouts</h1>
-      <a src='publicfree.html'> Freestyle based sets, ranging from easy to hard.</a>
+      <a href='publicfree.html'> Freestyle based sets, ranging from easy to hard.</a>
                 
                  </body>
                  </html>
