--- a/signup.html
+++ b/signup.html
@@ -4,15 +4,8 @@
  
  </head>
 <body>
-<a name="form1374568373" id="formAnchor1374568373"></a>
-<script type="text/javascript" src="https://fs28.formsite.com/include/form/embedManager.js?1374568373"></script>
-<script type="text/javascript">
-EmbedManager.embed({
-	key: "https://fs28.formsite.com/res/showFormEmbed?EParam=m%2FOmK8apOTBmYBEPCaYH0WrYe2Y6sJfY&1374568373",
-	width: "100%",
-	mobileResponsive: true
-});
-</script>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScwHHQ984B88hcf_5jPZuvZswk5InTqQT9xU4PsTijFYlFRNg/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
 
 </body>
 </html>
