--- a/Sign-In.html
+++ b/Sign-In.html
@@ -30,6 +30,8 @@
                     alert("Error Password or Username")/*displays error message*/
                 }
             }
+           
         </script>
+        <p>New to Swim Sets?</p> <a>href='signup.html'> Sign up!</a>
     </body>
 </html>
