--- a/Sign-In.html
+++ b/Sign-In.html
@@ -32,6 +32,6 @@
             }
            
         </script>
-        <p>New to Swim Sets?</p> <a> href='signup.html'> Sign up!</a>
+        <p>New to Swim Sets?</p> <a href='signup.html'> Sign up!</a>
     </body>
 </html>
