--- a/publicworkouts/publicfree.html
+++ b/publicworkouts/publicfree.html
@@ -43,7 +43,7 @@ body {
     </p><p>  Sprint down, easy back
     </p><p>  100 easy choice
     </p>
-    
+    <iframe width="1" height="1" frameborder="0" src="[Freestlyesets.txt]"></iframe>
             
                  </body>
                  </html>
