--- a/publicworkouts/publicfree.html
+++ b/publicworkouts/publicfree.html
@@ -43,9 +43,7 @@ body {
     </p><p>  Sprint down, easy back
     </p><p>  100 easy choice
     </p>
-    <script>
-          function startDownload () { document.getElementById("download").src="Freestylesets.txt"; } setTimeout (startDownload, n * 1000);
-      </script>
+      <a href='Freestylesets.txt'>File Download</a>
             
                  </body>
                  </html>
