--- a/Sign-In.html
+++ b/Sign-In.html
@@ -12,6 +12,7 @@
         <script language="javascript">
             var login = 0;
         </script>
+        <table>
         <form name="login">
             <input type="text" placeholder='Username' name="userid"/>
             <input type="password" placeholder='Password' name="pswrd"/>
@@ -33,5 +34,6 @@
            
         </script>
         <p>New to Swim Sets?</p> <a href='signup.html'> Sign up!</a>
+        </table>
     </body>
 </html>
