--- a/Sign-In.html
+++ b/Sign-In.html
@@ -24,7 +24,7 @@
         <script language="javascript">
             function check(form) { /*function to check userid & password*/
                 /*the following code checkes whether the entered userid and password are matching*/
-                if(form.userid.value == "swim" && form.pswrd.value == "sets") {
+                if(form.userid.value == "myuserid" && form.pswrd.value == "mypswrd") {
                     window.open('privatelogin.html')
                     alert('Loged in!')/*opens the target page while Id & password matches*/
                     var login = 1;
