--- a/publicworkouts/publicfree.html
+++ b/publicworkouts/publicfree.html
@@ -43,7 +43,7 @@ body {
     </p><p>  Sprint down, easy back
     </p><p>  100 easy choice
     </p>
-      <a href='Freestylesets.txt'>File Download</a>
+      <a data-auto-download href="freestylesets.txt">Download these workouts</a>
             
                  </body>
                  </html>
