--- a/publicworkouts/publicfree.html
+++ b/publicworkouts/publicfree.html
@@ -43,8 +43,8 @@ body {
     </p><p>  Sprint down, easy back
     </p><p>  100 easy choice
     </p>
-      <a data-auto-download href="Freestylesets.txt">Download these workouts</a>
-            
+     
+        <a id="downloadLink" href="Freestylesets.txt">Download these sets</a>.    
                  </body>
                  </html>
 
