--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -12,14 +12,29 @@
 }
 body {
 text-align: center;
+      
+     background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
             }
 a {
       color: rgba(0,0,0,1);
       </style>
       </head>
 <body>
+      <body>
+    <script language='javascript'>
+        var login = 0;
+        var pagevisits = pagevisits + 1;
+    </script>
+<header>
+ <ul>
+      <li><a href='index.html'>Home</a></li>
+      <li><a href='Sign-In.html'>Login</a></li>
+      <li><a href='#'>About</a></li>
+       </ul>
+            </header>
       <h1>Public Workouts</h1>
       <a href='publicfree.html'> Freestyle based sets, ranging from easy to hard.</a>
+       <a href='backstrokesets.html'> Backstroke based sets, ranging from easy to hard.</a>
                 
                  </body>
                  </html>
