--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -17,10 +17,15 @@ text-align: center;
             }
 a {
       color: rgba(0,0,0,1);
+            }
+ul {
+       color: rgba(255,255,255,1);
+  background: rgba(0,0,0,1);
+            }
       </style>
       </head>
 <body>
-      <body>
+    
     <script language='javascript'>
         var login = 0;
         var pagevisits = pagevisits + 1;
