--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -16,7 +16,7 @@ text-align: center;
      background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
             }
 a {
-      color: rgba(0,0,0,1);
+      color: red;
             }
 ul {
        color: rgba(255,255,255,1);
