--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -32,7 +32,7 @@ ul {
     </script>
 <header>
  <ul>
-      <li><a href='index.html'>Home</a></li>
+      <li><a href='swimsets.github.io/index.html'>Home</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
       <li><a href='#'>About</a></li>
        </ul>
