--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
 <html>
 <head>
+ <meta name="apple-mobile-web-app-capable" content="yes" />
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" type="text/css" href="main.css">
 <title>
