--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Swim Sets
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
     
-
+<script>
+ window.scrollTo(0, 1); 
+ </script>
 </body>
 </html>
