--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta name="apple-mobile-web-app-capable" content="yes" />
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
- <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
     <link rel="stylesheet" type="text/css" href="main.css">
 <title>
 Swim Sets
