--- a/Sign-In.html
+++ b/Sign-In.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML> <html> <html>
     <head>
+        <meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
         <title>Login page</title>
         <style>
              body {
