--- a/publicworkouts/publicfree.html
+++ b/publicworkouts/publicfree.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+      <meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
       <title>Public Workouts</title>
       <style>
             p {
