--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="viewport" content="width=device-width,initial-scale=1.5,user-scalable=no">
  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 <meta name="apple-mobile-web-app-status-bar-style"
     content="black-translucent" />
