Update and rename privatelogin.html to private/privatelogin.html

--- a/private/privatelogin.html
+++ b/private/privatelogin.html
@@ -17,7 +17,10 @@ window.open('Sign-In.html')
 </script>
 <body>
 <h1>
-Loged in!
+Please select your name
 </h1>
+  <ul>
+    <li><a href='williamlogin'>William Tyrrell</a></li>
+  </ul>
 </body>
 </html>
