--- a/Sign-In.html
+++ b/Sign-In.html
@@ -28,7 +28,7 @@
             function check(form) { /*function to check userid & password*/
                 /*the following code checkes whether the entered userid and password are matching*/
                 if(form.userid.value == "myuserid" && form.pswrd.value == "mypswrd") {
-                    window.open('privatelogin.html')
+                    window.open('/private/privatelogin.html')
                     alert('Loged in!')/*opens the target page while Id & password matches*/
                     var login = 1;
                 }
