--- a/williamlogin.html
+++ b/williamlogin.html
@@ -28,7 +28,7 @@
             function check(form) { 
              
                 if(form.userid.value == "william" && form.pswrd.value == "tyrrell") {
-                    window.open('privatelogin.html')
+                    window.open('/william/home.html')
                     alert('Loged in!')/*opens the target page while Id & password matches*/
                     var login = 1;
                 }
