--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ overflow-y: scroll;
 <body>
     <script language='javascript'>
         var login = 0;
-        var pagevisits = pagevisits + 1;
+        var williamlogin = 0;
     </script>
 <header>
  <ul>
