--- a/Sign-In.html
+++ b/Sign-In.html
@@ -16,6 +16,7 @@
         <h1>Login</h1>
         <script language="javascript">
             var login = 0;
+            var williamlogin = 0;
         </script>
         
         <form name="login">
