--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -31,6 +31,7 @@ ul {
     
     <script language='javascript'>
         var login = 0;
+          var williamlogin = 0;
         var pagevisits = pagevisits + 1;
     </script>
 <header>
