--- a/williamlogin.html
+++ b/williamlogin.html
@@ -14,7 +14,8 @@
         <table>
             <tr>
         <h1>Login</h1>
-       
+       <script>
+           var williamlogin = 0;
         
         <form name="login">
             <input type="text" placeholder='Username' name="userid"/>
