--- a/williamhome.html
+++ b/williamhome.html
@@ -1,1 +1,47 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+     <style>
+       ul {
+      padding: 10px;
+        background-color: black;
+      
+    }
+    li {
+      display: inline;
+      padding: 0px 10px 0px 10px;
+    }
+    a {
+        color: red;
+     }
+     body {
+         background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
+      /* Allows content to fill the viewport and go beyond the bottom */
+height: 100%;
+ 
+/* Allows you to scroll below the viewport; default value is visible */
+overflow-y: scroll;
+     }
+     img {
+         display: inline;
+     }
+    </style>
+    <title>William Tyrrell</title>
+     <meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+  </head>
+<body>
+ <script>
+   if (williamlogin = 0) {
+     window.open('Sign-In.html')
+   }
+   else {
+     alert('Welcome William')
+   }
+  </script>
+  <h1>Welcome!</h1>
+  
+  </body>
+</html>
+  
