--- a/williamlogin.html
+++ b/williamlogin.html
@@ -16,7 +16,7 @@
         <h1>Login</h1>
        <script>
            var williamlogin = 0;
-        
+                </script>
             
         <form name="login">
              <input type="text" placeholder='Username' name="userid"/>
