--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Swim Sets
  <ul>
       <li><a href='/publicworkouts/home.html'>Public Workouts</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
-      <li><a href='#'>About</a></li>
+      <li><a href='about.html'>About</a></li>
        </ul>
 <img src='welcome.png'>
     <h1> </h1>
