--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -38,7 +38,7 @@ ul {
  <ul>
       <li><a href='swimsets.github.io/index.html'>Home</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
-      <li><a href='#'>About</a></li>
+      <li><a href='about.html'>About</a></li>
        </ul>
             </header>
       <h1>Public Workouts</h1>
