--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@ Swim Sets
       <li><a href='/publicworkouts/home.html'>Public Workouts</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
       <li><a href='about.html'>About</a></li>
+  <li><script>
+  (function() {
+    var cx = '006908140477762267900:6v7s56trri4';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+   <gcse:search></gcse:search></li>
        </ul>
 <img src='welcome.png'>
     <h1> </h1>
