--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@ Swim Sets
       <li><a href='/publicworkouts/home.html'>Public Workouts</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
       <li><a href='about.html'>About</a></li>
-  <li><script>
+  
+       </ul>
+<img src='welcome.png'>
+    <h1> </h1>
+   <img src='swimmer.jpg' hight='355' width='370'>
+   <script>
   (function() {
     var cx = '006908140477762267900:6v7s56trri4';
     var gcse = document.createElement('script');
@@ -64,12 +69,7 @@ Swim Sets
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-   <gcse:search></gcse:search></li>
-       </ul>
-<img src='welcome.png'>
-    <h1> </h1>
-   <img src='swimmer.jpg' hight='355' width='370'>
-   
+   <gcse:search></gcse:search>
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
     
