--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@ Swim Sets
         var williamlogin = 0;
     </script>
 <header>
+ <script type="text/javascript">
+    document.getElementById('frmSearch').onsubmit = function() {
+        window.location = 'http://www.google.com/search?q=site:yoursitename.com ' + document.getElementById('txtSearch').value;
+        return false;
+    }
+</script>
  <ul>
       <li><a href='/publicworkouts/home.html'>Public Workouts</a></li>
       <li><a href='Sign-In.html'>Login</a></li>
       <li><a href='about.html'>About</a></li>
-  
+  <li><form id="frmSearch" class="search2" method="get" action="default.html" />
+<input class="search2" id="txtSearch" type="text" name="serach_bar" size="31" maxlength="255"       
+value="" style="left: 396px; top: 153px; width: 293px; height: 26px;" />
+<input class="search1" type="submit" name="submition" value="Search" style=" padding-  
+bottom:20px; left: 691px; top: 153px; height: 23px" />
+   <input class="search2" type="hidden" name="sitesearch" value="default.html" /></li>
        </ul>
 <img src='welcome.png'>
     <h1> </h1>
    <img src='swimmer.jpg' hight='355' width='370'>
-   <script>
-  (function() {
-    var cx = '006908140477762267900:6v7s56trri4';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-   <gcse:search></gcse:search>
+
    </header>
 <h4>New to swim sets? Create an account or login as a guest!</h4>
     
