--- a/userhome.html
+++ b/userhome.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+<script>var $jsName = document.querySelector('.name');
+var $jsValue = document.querySelector('.jsValue');
+
+$jsName.addEventListener('input', function(event){
+  $jsValue.innerHTML = $jsName.value;
+}, false);</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Setting HTML content example</title>
@@ -13,7 +18,6 @@
   <!-- Plain Javascript Example -->
   <h1>Plain Javascript Example</h1>Hello <span class="jsValue">World</span>
   
-  <!-- jQuery Example -->
-  <h1>jQuery Example</h1>Hello <span class="jqValue">World</span>
+
 </body>
 </html>
