--- a/userhome.html
+++ b/userhome.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    html {
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
+h1 {
+  margin: 1em 0 0.25em 0;
+}
+
+input[type=text] {
+  padding: 0.5em;
+}
+
+.jsValue, .jqValue {
+  color: red;
+}
+  </style>
 <script>var $jsName = document.querySelector('.name');
 var $jsValue = document.querySelector('.jsValue');
 
