--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -25,6 +25,9 @@ overflow-y: scroll;
      img {
          display: inline;
      }
+       table, th, td {
+   border: 1px solid black;
+}
     </style>
     <title>William Tyrrell</title>
      <meta name="apple-mobile-web-app-status-bar-style"
@@ -43,15 +46,15 @@ overflow-y: scroll;
   <h1>Welcome!</h1>
   <table id='Will Table'>
     <tr>
-      <td>
+     
         <h3>Calender</h3>
-      </td>
+     
 <td>
   <iframe src="https://calendar.google.com/calendar/embed?title=William%20Tyrrell%27s%20Swim%20Set%20Calender&amp;height=600&amp;wkst=1&amp;bgcolor=%2333ffff&amp;src=spyponders.com_22tiiue83udrovn5rkuke2epes%40group.calendar.google.com&amp;color=%23711616&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
       </td>
     </tr>
   </table>
-  </table>
+  
     </body>
 </html>
   
