--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -36,7 +36,7 @@ overflow-y: scroll;
   </head>
 <body>
  <script>
-   if williamlogin = 0 {
+   if (williamlogin = 1) {
      window.open('Sign-In.html')
    }
    else {
