--- a/privatelogin.html
+++ b/privatelogin.html
@@ -13,7 +13,7 @@ Private Account Login
 if (login = 0) {
 }
 else {
-window.open('Sign-In.html')
+  window.location = "https://swimsets.github.io/Sign-In.html";
 }
 </script>
 <body>
