--- a/williamlogin.html
+++ b/williamlogin.html
@@ -28,8 +28,9 @@
             function check(form) { 
              
                 if(form.userid.value == "william" && form.pswrd.value == "tyrrell") {
-                    window.open('willuser/williamhome.html')
+                    window.location = "http://swimsets.github.io/";
                     alert('Loged in!')/*opens the target page while Id & password matches*/
+                    var williamlogin = 1;
                     var login = 1;
                 }
                 else {
