--- a/williamlogin.html
+++ b/williamlogin.html
@@ -28,7 +28,7 @@
             function check(form) { 
              
                 if(form.userid.value == "william" && form.pswrd.value == "tyrrell") {
-                    window.location = "http://swimsets.github.io/";
+                    window.location = "http://swimsets.github.io/willuser/williamhome.html";
                     alert('Loged in!')/*opens the target page while Id & password matches*/
                     var williamlogin = 1;
                     var login = 1;
