--- a/Sign-In.html
+++ b/Sign-In.html
@@ -15,8 +15,8 @@
             <tr>
         <h1>Login</h1>
         <script language="javascript">
-            var login = 0;
-            var williamlogin = 0;
+            var login == 0;
+            var williamlogin == 0;
         </script>
         
         <form name="login">
@@ -31,7 +31,7 @@
                 if(form.userid.value == "myuserid" && form.pswrd.value == "mypswrd") {
                     window.open('privatelogin.html')
                     alert('Loged in!')/*opens the target page while Id & password matches*/
-                    var login = 1;
+                    var login == 1;
                 }
                 else {
                     alert("Error Password or Username")/*displays error message*/
