--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -36,8 +36,8 @@ overflow-y: scroll;
   </head>
 <body>
  <script>
-   if (williamlogin = 0) {
-     window.location = "https://swimsets.github.io/Sign-In.html";
+   if (williamlogin == 0) {
+     window.location == "https://swimsets.github.io/Sign-In.html";
    }
    else {
      alert('Welcome William')
