--- a/williamlogin.html
+++ b/williamlogin.html
@@ -15,7 +15,7 @@
             <tr>
         <h1>Login</h1>
        <script>
-           var williamlogin = 0;
+           var williamlogin == 0;
                 </script>
             
         <form name="login">
@@ -30,8 +30,8 @@
                 if(form.userid.value == "william" && form.pswrd.value == "tyrrell") {
                     window.open ('/willuser/williamhome.html');
                     alert('Loged in!')/*opens the target page while Id & password matches*/
-                    var williamlogin = 1;
-                    var login = 1;
+                    var williamlogin == 1;
+                    var login == 1;
                 }
                 else {
                     alert("Error Password or Username")
