--- a/Sign-In.html
+++ b/Sign-In.html
@@ -31,7 +31,7 @@
                 if(form.userid.value == "myuserid" && form.pswrd.value == "mypswrd") {
                     window.open('privatelogin.html')
                     alert('Loged in!')/*opens the target page while Id & password matches*/
-                    var login == 1;
+                    var login = 1;
                 }
                 else {
                     alert("Error Password or Username")/*displays error message*/
