--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -37,7 +37,7 @@ overflow-y: scroll;
 <body>
  <script>
    if (williamlogin == 0) {
-     window.location == "https://swimsets.github.io/Sign-In.html";
+     window.open("https://swimsets.github.io/Sign-In.html");
    }
    else {
      alert('Welcome William')
