--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -35,7 +35,7 @@ overflow-y: scroll;
 <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
 <body>
- <script>
+ <script type='javascript'>
    if (williamlogin == 0) {
      window.open("https://swimsets.github.io/Sign-In.html");
    }
