--- a/privatelogin.html
+++ b/privatelogin.html
@@ -9,7 +9,7 @@ Private Account Login
 </title>
    <script>
   var williamlogin = 0;
-if (login = 0) {
+if ( login == 0 ) {
 }
 else {
   window.open = "https://swimsets.github.io/Sign-In.html";
