--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Swim Sets
 }
 	window.scrollTo(0, 1); 
 	document.getElementById('login').onclick = function() {
-   window.open('Sign-In.html');
+   window.open('privatelogin.html');
 }
 	window.scrollTo(0, 1); 
 	document.getElementById('publicworkouts').onclick = function() {
