--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ Swim Sets
 </head>
 <body>
     <script language='javascript'>
-        var login = 0;
-        var williamlogin = 0;
+       document.cookie = "willlogin=0";
     </script>
 <header>
 
