--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -37,14 +37,14 @@ overflow-y: scroll;
 <body>
   
  <script type='javascript'>
- /*
-   if (williamlogin == 0) {
+ var cookieValue = document.cookie.replace(/(?:(?:^|.*;\s*)willlog\s*\=\s*([^;]*).*$)|^.*$/, "$1");
+   if (cookieValue == 0) {
      window.open("https://swimsets.github.io/Sign-In.html");
    }
    else {
      alert('Welcome William')
    }
-   */
+   
   </script>
   <h1>Welcome!</h1>
   <table id='Will Table'>
