--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -16,7 +16,7 @@
 body {
 text-align: center;
       
-     background: url('https://phenomenex.files.wordpress.com/2016/01/water.jpg');
+     background: green
             }
 a {
       color: red;
