--- a/publicworkouts/home.html
+++ b/publicworkouts/home.html
@@ -42,8 +42,10 @@ ul {
        </ul>
             </header>
       <h1>Public Workouts</h1>
+      <h3>Sets</h3>
       <a href='publicfree.html'> Freestyle based sets, ranging from easy to hard.</a>
        <a href='backstrokesets.html'> Backstroke based sets, ranging from easy to hard.</a>
+      <h3>Full workouts</h3>
                 
                  </body>
                  </html>
