--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@ Swim Sets
     padding: 12px 16px;
     z-index: 1;
 }
+	 .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
     </style>
 </head>
 <body>
