--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Swim Sets
 		 <div class="container">
  
    <div class="dropdown">
-  <img src='https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/2000px-Hamburger_icon.svg.png' hight='40'>
+  <img src='https://cdn4.iconfinder.com/data/icons/flat-black/128/menu.png' >
   <div class="dropdown-content">
    <a href='about.html'>About</a>
 	  <a href='publicworkouts/home.html'>Public Workouts</a>
