--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@ Swim Sets
     display: inline-block;
 }
 
-.dropdown:hover .dropdown-content {
-    display: inline;
+.dropdown:hover  {
+    display: block;
 }
+	 .dropdown-content {
+		 display: inline;
+	 }
+		 
     </style>
 </head>
 <body>
