--- a/index.html
+++ b/index.html
@@ -55,12 +55,10 @@ Swim Sets
     display: inline-block;
 }
 
-.dropdown:hover  {
+.dropdown:hover .dropdown-content {
     display: block;
 }
-	 .dropdown-content {
-		 display: inline;
-	 }
+	
 		 
     </style>
 </head>
