--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Swim Sets
          display: inline;
      }
 	 .dropdown-content {
-    
+    display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 50px;
