--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -37,13 +37,13 @@ overflow-y: scroll;
 <body>
   
  <script type='javascript'>
- var cookieValue = document.cookie.replace(/(?:(?:^|.*;\s*)willlog\s*\=\s*([^;]*).*$)|^.*$/, "$1");
-   if (cookieValue == 0) {
-     window.open("https://swimsets.github.io/Sign-In.html");
-   }
-   else {
-     alert('Welcome William')
-   }
+var x = readCookie('willlogin')
+if x = 1 {
+	alert('Welcome William!')
+}
+else {
+window.location('swimsets.github.io/Sign-In.html')
+}
    
   </script>
   <h1>Welcome!</h1>
