--- a/willuser/williamhome.html
+++ b/willuser/williamhome.html
@@ -36,13 +36,12 @@ overflow-y: scroll;
   </head>
 <body>
   
- <script type='javascript'>
+ <script>
 if( document.cookie.indexOf("cookiename=") < 0) {
     alert("Not loged in!");
     location.href = "https://swimsets.github.io";
 }
-   
-  </script>
+    </script>
   <h1>Welcome!</h1>
   <table id='Will Table'>
     <tr>
